--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     
     <div id="linkList">
         <p>Use the coordinates to find outings nearby or follow the links for suggestions:</p>
-        <a class="button-link" id="thingsToDo" href="#"><span>Things to do</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="restaurants" href="#"><span>Restaurants</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="thingsToDo" href="#"><span>Things to do</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="restaurants" href="#"><span>Restaurants</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
         <a class="button-link" id="coffeeShops" href="#"><span>Coffee Shops</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="museums" href="#"><span>Museums</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="bookStores" href="#"><span>Book Stores</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="libraries" href="#"><span>Libraries</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="scenicViews" href="#"><span>Scenic Views</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="parks" href="#"><span>Parks</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-        <a class="button-link" id="shopping" href="#"><span>Shopping Malls</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="museums" href="#"><span>Museums</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="bookStores" href="#"><span>Book Stores</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="libraries" href="#"><span>Libraries</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="scenicViews" href="#"><span>Scenic Views</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="parks" href="#"><span>Parks</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
+        <a class="button-link" target="_blank" id="shopping" href="#"><span>Shopping</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
     </div>
 
     <div class="stickyBottomMenu">
@@ -72,3 +72,7 @@
 
 <!-- 276 Alpine Drive Paramus NJ -->
 <!-- 52 Ackerman Avenue Oradell NJ -->
+
+
+<!-- P: https://www.google.com/maps/place/27%C2%B048'05.6%22N+101%C2%B013'38.3%22W/@27.800798,-101.3154739,12z/data=!4m4!3m3!8m2!3d27.8015499!4d-101.2272986?entry=ttu -->
+<!-- R: https://www.google.com/maps/search/Restaurants/@27.8010528,-101.3154739,12z/data=!3m1!4b1!4m6!2m5!3m4!2zMjfCsDQ4JzA1LjYiTiAxMDHCsDEzJzM4LjMiVw!4m2!1d-101.2272986!2d27.8015499?entry=ttu -->
