Removing link list for now for MVP

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div> 
     </div>
     
-    <div id="linkList">
+    <!-- <div id="linkList">
         <p>Use the coordinates to find outings nearby or follow the links for suggestions:</p>
         <a class="button-link" target="_blank" id="thingsToDo" href="#"><span>Things to do</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
         <a class="button-link" target="_blank" id="restaurants" href="#"><span>Restaurants</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
@@ -55,7 +55,7 @@
         <a class="button-link" target="_blank" id="scenicViews" href="#"><span>Scenic Views</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
         <a class="button-link" target="_blank" id="parks" href="#"><span>Parks</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
         <a class="button-link" target="_blank" id="shopping" href="#"><span>Shopping</span><span class="button-link-icon material-symbols-outlined">arrow_forward</span></a>
-    </div>
+    </div> -->
 
     <div class="stickyBottomMenu">
         <button style="display: flex; align-items: center; justify-content: center; padding-left: 4rem; padding-right: 4rem;" type="button" onclick="getLocation()">
